--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
   width: 100%;
   top: 0;
   z-index: 1000;
+
+  .logonavbar {
+    height: 45px;
+    width: auto;
+  }
 }
 .navbar a {
   color: black;
@@ -58,6 +63,7 @@
 
 /* about */
 #about {
+  margin-bottom: 5rem;
   .animasi2 {
     height: auto;
     width: auto;
@@ -91,7 +97,19 @@
 
 /* about */
 
+/* copyright */
+.copyright {
+  text-align: center;
+  background-color: #58bba9;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  color: #fff;
+}
+/* copyright */
+
 /* HOME PAGE */
+
+/* ////////////////////////// */
 
 /* ABOUT PAGE */
 
